Initial version of gedcom converter

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 wt-reporting/FedirAncestors-MatchAndCompare-v.0.5.pbit
+wt-convert-gedcom-myheritage/tree-images/images/
+wt-convert-gedcom-myheritage/OurFamilyTree_fromWikitree.ged
